@@ -464,7 +464,7 @@ COMMONOBJS = \
 
 
 # Targets
-.PHONY: clean $(TIMIDEPS)
+.PHONY: clean distclean localclean $(TIMIDEPS)
 
 default: $(SW_BINARY)
 all: default
@@ -481,6 +481,9 @@ include $(LIBS_DIR)/timidity/_timi.mak
 $(SW_BINARY): $(SOFT_ASM) $(SOFTOBJS) $(COMMON_ASM) $(COMMONOBJS) $(TIMIDEPS)
 	$(LINKER) -o $(SW_BINARY) $(SOFT_ASM) $(SOFTOBJS) $(COMMON_ASM) $(COMMONOBJS) $(LDFLAGS)
 
-clean:
+localclean:
 	rm -f *.o *.res dos/*.o core
+clean: localclean timi_clean
+distclean: clean
+	rm -f $(SW_BINARY)
 
